<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Saldo Bilhete</string>
    <string name="action_settings">Config</string>
    <string name="inserirCartao">Inserir Cartão</string>
    <string name="cptmMetro">CPTM/Metro</string>
    <string name="outrosValores">Outros Valores</string>
    <string name="historico">Histórico</string>
    <string name="saldoBilhete">Saldo do Bilhete:</string>
    <string name="inserirSaldo">Inserir Saldo</string>
    <string name="valor">Valor:</string>
    <string name="alert_dialog_cancelar">Cancelar</string>
    <string name="alert_dialog_confirmar">Confirmar</string>
    <string name="limparDados">Limpar Dados</string>
    <string name="sem_texto"></string>
    <string name="tipo">Tipo:</string>

</resources>