<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/btnInserirSaldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnOutrosValores"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/btnOutrosValores"
        android:text="@string/inserirSaldo" />

    <Button
        android:id="@+id/btnCPTMMetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnOutrosValores"
        android:layout_alignRight="@+id/btnOutrosValores"
        android:layout_below="@+id/btnInserirSaldo"
        android:layout_marginTop="15dp"
        android:text="@string/cptmMetro" />

    <Button
        android:id="@+id/btnOutrosValores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnCPTMMetro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/outrosValores" />

    <Button
        android:id="@+id/btnHistorico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnOutrosValores"
        android:layout_alignRight="@+id/btnOutrosValores"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btnOutrosValores"
        android:layout_marginTop="15dp"
        android:text="@string/historico" />

    <TextView
        android:id="@+id/txtSaldoBilhete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/saldoBilhete"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/txtValorSaldoBilhete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/txtSaldoBilhete"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>